# hash

./: .travis.yml  AUTHORS.markdown  CHANGELOG.markdown  Data-Hash-CRC32.html  Data-Hash-Double.html  Data-Hash-Rolling.html  Data-Hashable-Extras.html  README.markdown  Setup.lhs  doc-index.html  hash.cabal  hash.haddock  hashable-extras.cabal  index-frames.html  index.html  mini_Data-Hash-CRC32.html  mini_Data-Hash-Double.html  mini_Data-Hash-Rolling.html  mini_Data-Hashable-Extras.html
src/: Data-Hash-CRC32.html  Data-Hash-Double.html  Data-Hash-Rolling.html  Data-Hashable-Extras.html
src/Data/Hash/: CRC32.hs  Double.hs  Rolling.hs
src/Data/Hashable/: Extras.hs
tests/: doctests.hs
